fix alignment of brands slide

--- a/src/styles/slide-types.styl
+++ b/src/styles/slide-types.styl
@@ -92,13 +92,13 @@
   &.brands
     .build
       display flex
-      width 100%
+      width 105%
       flex-direction row
       justify-content space-around
-      padding 3.5rem 0
+      padding 3.5rem 2.5rem
       box-shadow inset 0 2px 5px #bdbdbd, inset 0 -2px 5px #bdbdbd
     figure
-      width sw(10)
+      width sw(9)
       img
         filter grayscale(100%)
         width inherit
